fix: Stop navbar overlapping top of page

--- a/Resume/css/style.css
+++ b/Resume/css/style.css
@@ -92,6 +92,10 @@ body
     width: 100%;
 }
 
+main {
+    margin-top: 40px;
+}
+
 
 /*colors*/
 .orange
